kubernetes/apps/default/unifi/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-redirect
spec:
  hostnames: ["ui.iacob.uk"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            hostname: 192.168.1.1
            statusCode: 302
